--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ family=Happy+Monkey&family=Orbitron:wght@400;500;600;700;800&display=swap"
     </head>
     <body>
         <div class="flexbox">
-            <div>Today is Nick's birhday &#127874;</div>
-            <img class="profile-picture" src="per.jpg" alt="Per smiling photo">
-            <div class="age">24 years old</div>
-            <div class="date">01.11.2022</div>
+            <div>Today is Jivo's birhday &#127874;</div>
+            <img class="profile-picture" src="IMG-20230501-WA0000.jpg" alt="Per smiling photo">
+            <div class="age">25 years old</div>
+            <div class="date">01.05.2023</div>
             <div class="gift-info">
                 <div>Here's how happy I am for you today &#128525;</div>
                 <div class="hover">(Hover Over the gift)</div>
