--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ family=Happy+Monkey&family=Orbitron:wght@400;500;600;700;800&display=swap"
     </head>
     <body>
         <div class="flexbox">
-            <div>Today is Jivo's birhday &#127874;</div>
-            <img class="profile-picture" src="IMG-20230501-WA0000.jpg" alt="Per smiling photo">
-            <div class="age">25 years old</div>
+            <div>Today is Gahima's birhday &#127874;</div>
+            <img class="profile-picture" src="WhatsApp Image 2022-10-23 at 8.55.35 PM (1).jpeg" alt="Per smiling photo">
+            <div class="age">24 years old</div>
             <div class="date">01.05.2023</div>
             <div class="gift-info">
                 <div>Here's how happy I am for you today &#128525;</div>
