--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ family=Happy+Monkey&family=Orbitron:wght@400;500;600;700;800&display=swap"
     <body>
         <div class="flexbox">
             <div>Today is Gahima's birhday &#127874;</div>
-            <img class="profile-picture" src="WhatsApp Image 2022-10-23 at 8.55.35 PM (1).jpeg" alt="Per smiling photo">
+            <img class="profile-picture" src="gahima1.jpeg" alt="Per smiling photo">
             <div class="age">24 years old</div>
             <div class="date">01.05.2023</div>
             <div class="gift-info">
